# monoasm

./: .gitignore  Cargo.toml  README.md  fibo.c  fibo.js  fibo.rb  gen.rb  test.s
.github/workflows/: rust.yml
monoasm/: Cargo.toml
monoasm/src/: jit_memory.rs  lib.rs  main.rs  test.rs
monoasm/tests/: adcb.rs  adcl.rs  adcq.rs  adcw.rs  addb.rs  addl.rs  addq.rs  addw.rs  andb.rs  andl.rs  andpd.rs  andq.rs  andw.rs  cdq.rs  cmoveqq.rs  cmpb.rs  cmpl.rs  cmpq.rs  cmpw.rs  counts.rs  counts_dword.rs  cvttsd2si.rs  div.rs  divl.rs  fact.rs  fibo.rs  idivl.rs  lib.rs  minmaxsd.rs  movb.rs  movl.rs  movq.rs  movw.rs  negq.rs  orb.rs  orl.rs  orq.rs  orw.rs  popcnt.rs  popq.rs  (+27 more)
monoasm_inst/: Cargo.toml
monoasm_inst/src/: lib.rs
monoasm_macro/: Cargo.toml
monoasm_macro/src/: asm.rs  inst.rs  lib.rs  parse.rs
monoruby/: Cargo.toml
monoruby/src/: ast.rs  codegen.rs  lib.rs  main.rs  parse.rs
src/: main.rs
