[package]
name = "monoasm"
version = "0.1.0"
authors = ["monochrome <sisshiki@mac.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.82"
region = "3.0.0"
monoasm_macro = { path = "../monoasm_macro" }
proc-macro2 = "1.0.24"
syn = "1.0.58"
