[package]
name = "monoasm_macro"
version = "0.1.0"
authors = ["monochrome <sisshiki@mac.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.4"
syn = "1.0.5"
quote = "1.0.2"
