[package]
name = "monoasm_macro"
version = "0.1.0"
authors = ["monochrome <sisshiki@mac.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.8"

[dependencies.syn]
version = "1.0.58"
features = ["full"]
