[package]
name = "monoruby"
version = "0.1.0"
authors = ["sisshiki1969 <sisshiki@mac.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monoasm_macro = { path = "../monoasm_macro" }
monoasm = { path = "../monoasm" }
nom = "7.1.0"
